Feat: added users / roles and initial boilerplate

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/sanctum": "^2.9",
         "laravel/tinker": "^2.5",
         "phpsa/laravel-api-controller": "^2.1",
-        "phpsa/laravel-postman": "^2.2"
+        "phpsa/laravel-postman": "^2.2",
+        "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.9",
