Pushing minor update

--- a/.docksal/docksal.yml
+++ b/.docksal/docksal.yml
@@ -8,3 +8,7 @@ services:
     extends:
       file: ${HOME}/.docksal/stacks/services.yml
       service: mail
+  web:
+    extends:
+      file: ${HOME}/.docksal/stacks/services.yml
+      service: nginx
